--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Online food Delivery service | OnlineMeal.com</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet"  media="screen and (max-width:1170px)" href="phone.css">
+    <link rel="stylesheet" media="screen and (max-width:1170px)" href="phone.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -64,17 +64,15 @@
         <h1 class="h-primary center">Our Clients</h1>
         <div id="clients">
             <div class="client-item">
-                <img src="logo.png" alt="Our Clients">
+                <img src="5.png" alt="Our Clients">
             </div>
             <div class="client-item">
-                <img src="logo.png" alt="Our Clients">
+                <img src="6.png" alt="Our Clients">
             </div>
             <div class="client-item">
-                <img src="logo.png" alt="Our Clients">
+                <img src="7.png" alt="Our Clients">
             </div>
-            <div class="client-item">
-                <img src="logo.png" alt="Our Clients">
-            </div>
+
         </div>
     </section>
     <section id="contact">
